--- a/.github/workflows/push-develop-branch.yml
+++ b/.github/workflows/push-develop-branch.yml
@@ -54,7 +54,7 @@ jobs:
 
             - name: 'Deploy the entire branch to Integration org'
               #run: sfdx force:source:deploy -p force-app --testlevel RunLocalTests --json
-              run: sfdx force:source:deploy -p force-app/main/default --json
+              run: sfdx force:source:deploy -p force-app/main/default/classes/HunaTest.cls --json
 
             - name: 'Deploy destructive changes (if any) to Integration org'
               run: sfdx force:mdapi:deploy -d "changed-sources/destructiveChanges" --checkonly --ignorewarnings 
